<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/back"
    >
<LinearLayout
	android:id="@+id/widget15__1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
<Button
	android:id="@+id/sort_button"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:text="@string/sort_button_caption"
	android:layout_weight="1000" />
<Button
	android:id="@+id/show_all_button"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:text="@string/show_all_button_caption"
	android:layout_weight="1000" />
<Button
	android:id="@+id/add_button"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text=""
        android:background="@android:drawable/ic_menu_add"
	android:layout_weight="10" />
</LinearLayout>
<ListView
	android:id="@android:id/list"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
        android:layout_weight="1000"
	android:gravity="top" />
<LinearLayout
	android:id="@+id/widget15_1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
<Button
	android:id="@+id/list_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/list_button_caption"
        android:drawableTop="@android:drawable/ic_menu_agenda"
	android:layout_weight="1000" />
<Button
	android:id="@+id/calendar_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/calendar_button_caption"
        android:drawableTop="@android:drawable/ic_menu_today"
	android:layout_weight="1000" />
<Button
	android:id="@+id/diagram_button"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/diagram_button_caption"
        android:drawableTop="@android:drawable/ic_menu_send"
	android:layout_weight="1000" />
</LinearLayout>
</LinearLayout>

